# llamba_library

./: README.md  pyproject.toml
llamba_library/: bioage_model.py  plots.py
samples/: library-in-action.ipynb
