[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llamba_library"
version = "0.1.12"
description = "A library to merge BioAge models with LLMs!"
readme = "README.md"
authors = [
  "Sergei Tikhomirov <sergey.zr.co.uk@gmail.com>", 
  "Mike Krivonosov <krivonosov@itmm.unn.ru>"
]
maintainers = [
    "Sergei Tikhomirov <sergey.zr.co.uk@gmail.com>", 
    "Mike Krivonosov <krivonosov@itmm.unn.ru>"
]
repository = "https://github.com/mike-live/llamba_library"
packages = [
  {include = "llamba_library", from = "./"}
]

[tool.poetry.dependencies]
python = "3.11.*"
torch = {version = "2.3.1+cpu", source = "torch"}
torchvision = {version = "0.18.1+cpu", source = "torch"}
torchaudio = {version = "2.3.1+cpu", source = "torch"}
pytorch_lightning = "2.1.4"
numpy = "^1"
shap = "0.46.0"
pandas = "2.2.3"
torchmetrics = "1.2.1"
seaborn = "*"
matplotlib = "3.9.3"
openpyxl = "^3.1.5"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
